--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -16,15 +20,20 @@
     "target": "es5",
     "downlevelIteration": true,
     "paths": {
-      "@/*": ["*"],
-    }
+      "@/*": [
+        "*"
+      ]
+    },
+    "incremental": true
   },
   "include": [
     "pages/**/*",
     "src/**/*",
     "types/**/*",
     "types/global.d.ts",
-    "next-env.d.ts",
+    "next-env.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
