--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "date-fns": "^2.24.0",
     "ethers": "^5.4.6",
     "lodash": "^4.17.21",
-    "next": "11.1.0",
+    "next": "12",
     "nullthrows": "^1.1.1",
     "polished": "^4.1.3",
     "react": "17.0.2",
@@ -67,6 +67,6 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.0",
     "typechain": "5.0.0",
-    "typescript": "4.3.5"
+    "typescript": "^4.3.5"
   }
 }
