--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,7 @@
     "types/**/*",
     "types/global.d.ts",
     "next-env.d.ts",
-    "additional-bignumber.d.ts",
-    "additional-outy.d.ts"
+    "additional-bignumber.d.ts"
   ],
   "exclude": [
     "node_modules"
