--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ts-enum-util": "^4.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.1.2",
     "@typechain/ethers-v5": "7.0.0",
     "@types/identicon.js": "^2.3.1",
     "@types/lodash": "^4.14.175",
