--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prettier:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
     "start": "next start",
     "typechain": "typechain --target=ethers-v5 ./src/abis/**/*.json --out-dir ./types/typechain/",
-    "postinstall": "yarn typechain"
+    "postinstall": "yarn typechain",
+    "schema": "npx apollo service:download --endpoint=https://api.thegraph.com/subgraphs/name/laimejesus/fiatlux types/subgraph/graphql-schema.json",
+    "codegen": "npx apollo codegen:generate --localSchemaFile=types/subgraph/graphql-schema.json --target=typescript types/subgraph/__generated__ --outputFlat"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -45,6 +47,9 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "ethers": "^5.4.6",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
+    "graphql-tag": "^2.12.6",
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.21",
     "next": "12",
