--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Görli
 NEXT_PUBLIC_REACT_APP_DEFAULT_CHAIN_ID=5
+
+# FIAT Subgraph API
 NEXT_PUBLIC_REACT_APP_SUBGRAPH_API=https://api.thegraph.com/subgraphs/name/laimejesus/fiatlux
