adds script to generate apollo schema

--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "prettier:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
     "start": "next start",
     "typechain": "typechain --target=ethers-v5 ./src/abis/**/*.json --out-dir ./types/typechain/",
-    "postinstall": "yarn typechain; yarn schema; yarn codegen",
-    "schema": "npx apollo service:download --endpoint=https://api.thegraph.com/subgraphs/name/laimejesus/fiatlux types/subgraph/graphql-schema.json",
-    "codegen": "npx apollo codegen:generate --localSchemaFile=types/subgraph/graphql-schema.json --target=typescript types/subgraph/__generated__ --outputFlat"
+    "postinstall": "yarn typechain; yarn schema",
+    "schema": "bash scripts/apollo-schema.sh"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
