--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ethersproject/providers": "^5.4.5",
     "@ethersproject/units": "^5.4.0",
     "@popperjs/core": "2.9.2",
+    "@xstate/react": "^1.6.3",
     "antd": "^4.18.2",
     "axios": "^0.21.4",
     "bignumber.js": "^9.0.1",
@@ -64,9 +65,11 @@
     "react-popper": "^2.2.5",
     "react-toastify": "^8.0.3",
     "react-use-storage": "^0.5.1",
+    "react-youtube": "^7.14.0",
     "sanitize.css": "^12.0.1",
     "swr": "^1.1.0-beta.8",
-    "ts-enum-util": "^4.0.2"
+    "ts-enum-util": "^4.0.2",
+    "xstate": "^4.28.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.1.2",
