--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "graphql-tag": "^2.12.6",
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.2.1",
     "next": "12",
     "nullthrows": "^1.1.1",
     "outy": "^0.1.2",
