--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "fiat-dapp",
+  "name": "fiat-ui",
   "version": "0.1.0",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
