--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "husky": "^7.0.2",
     "lessc": "^1.0.2",
     "lint-staged": "^11.1.2",
+    "node-sass": "6.0.1",
     "prettier": "^2.4.0",
-    "sass": "^1.50.0",
     "stylelint": "^14.1.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "typechain": "5.0.0",
