--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-# Görli
-NEXT_PUBLIC_REACT_APP_DEFAULT_CHAIN_ID=5
-
-# FIAT Subgraph API
-NEXT_PUBLIC_REACT_APP_SUBGRAPH_API=https://api.thegraph.com/subgraphs/name/fiatdao/fiat-subgraph-goerli
+# FIAT Subgraph APIs
+NEXT_PUBLIC_REACT_APP_SUBGRAPH_GOERLI=https://api.thegraph.com/subgraphs/name/fiatdao/fiat-subgraph-goerli
+NEXT_PUBLIC_REACT_APP_SUBGRAPH_MAINNET=https://api.thegraph.com/subgraphs/name/fiatdao/fiat-subgraph
