--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,19 @@
   "rewrites": [
     {
       "source": "/senatus",
-      "destination": "/"
+      "destination": "https://gov.fiatdao.com/senatus"
     },
     {
       "source": "/rewards",
-      "destination": "/"
+      "destination": "https://gov.fiatdao.com/rewards"
     },
     {
       "source": "/age-of-romulus",
-      "destination": "/"
+      "destination": "https://gov.fiatdao.com/age-of-romulus"
     },
     {
       "source": "/airdrop",
-      "destination": "/"
+      "destination": "https://gov.fiatdao.com/airdrop"
     }
   ]
 }
