--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ NEXT_PUBLIC_REACT_APP_DEFAULT_CHAIN_ID=5
 # FIAT Subgraph APIs
 NEXT_PUBLIC_REACT_APP_SUBGRAPH_GOERLI=https://api.thegraph.com/subgraphs/name/fiatdao/fiat-subgraph-goerli
 NEXT_PUBLIC_REACT_APP_SUBGRAPH_MAINNET=https://api.thegraph.com/subgraphs/name/fiatdao/fiat-subgraph
+
+# RPCs
+NEXT_PUBLIC_REACT_APP_RPC_URL_GOERLI=https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161
+NEXT_PUBLIC_REACT_APP_RPC_URL_MAINNET=https://eth-mainnet.alchemyapi.io/v2/RATqew-Zdrn1kHFINdjCh1IoBHoffXFH
