--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ NEXT_PUBLIC_REACT_APP_SUBGRAPH_MAINNET=https://api.thegraph.com/subgraphs/name/f
 # RPCs
 NEXT_PUBLIC_REACT_APP_RPC_URL_GOERLI=https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161
 NEXT_PUBLIC_REACT_APP_RPC_URL_MAINNET=https://eth-mainnet.alchemyapi.io/v2/RATqew-Zdrn1kHFINdjCh1IoBHoffXFH
+
+# isDev() resolves to true when serving with `yarn dev`
+NEXT_PUBLIC_VERCEL_ENV=development
