Update goerli .env example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NEXT_PUBLIC_REACT_APP_SUBGRAPH_GOERLI=https://api.thegraph.com/subgraphs/name/fi
 NEXT_PUBLIC_REACT_APP_SUBGRAPH_MAINNET=https://api.thegraph.com/subgraphs/name/fiatdao/fiat-subgraph
 
 # RPCs
-NEXT_PUBLIC_REACT_APP_RPC_URL_GOERLI=https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161
+NEXT_PUBLIC_REACT_APP_RPC_URL_GOERLI=https://eth-goerli.alchemyapi.io/v2/EjNPAiGxb79h2LiiOlQPBM0AlfAfbzmQ
 NEXT_PUBLIC_REACT_APP_RPC_URL_MAINNET=https://eth-mainnet.alchemyapi.io/v2/RATqew-Zdrn1kHFINdjCh1IoBHoffXFH
 
 # isDev() resolves to true when serving with `yarn dev`
