--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ NEXT_PUBLIC_REACT_APP_RPC_URL_MAINNET=https://eth-mainnet.alchemyapi.io/v2/RATqe
 
 # isDev() resolves to true when serving with `yarn dev`
 NEXT_PUBLIC_VERCEL_ENV=development
+NEXT_PUBLIC_REACT_APP_GA_MEASUREMENT_ID=G-GG9TCH0RM5
