--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint",
     "lint:fix": "eslint --fix \"./**/*.{js,jsx,ts,tsx}\"",
     "lessc": "lessc src/styles/antd.less src/styles/antd.css -js",
-    "prepare": "husky install; yarn typechain; yarn schema",
+    "prepare": "husky install; yarn typechain; yarn schema; yarn metadata",
     "prettier:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
+    "metadata": "node scripts/metadata.js",
     "start": "next start",
     "typechain": "typechain --target=ethers-v5 ./src/abis/**/*.json --out-dir ./types/typechain/",
     "schema": "bash scripts/apollo-schema.sh"
@@ -39,6 +40,7 @@
     "@ethersproject/providers": "^5.4.5",
     "@ethersproject/units": "^5.4.0",
     "@popperjs/core": "2.9.2",
+    "@sentry/nextjs": "^6.19.6",
     "@xstate/react": "^1.6.3",
     "antd": "^4.18.2",
     "axios": "^0.21.4",
