--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/react-select": "^4.0.17",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "apollo": "^2.34.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
