--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-blockies": "^1.4.1",
+    "react-cookie-banner": "^4.1.0",
     "react-countdown": "^2.3.2",
     "react-device-detect": "1.17.0",
     "react-dom": "17.0.2",
